C - Add links for different game variants. Add styles.css, layout.erb

--- a/Ruby/Sinarps/views/index.erb
+++ b/Ruby/Sinarps/views/index.erb
@@ -1,1 +1,8 @@
-Howdy Ho!
+<h2>Welcome to SinaRPS</h2>
+
+<h4>Please make a selection:</h4>
+<a href="/rps">Regular ol RPS</a>
+<a href="/dynamite">Dynamite</a>
+<a href="/lizard-spock">Lizard-Spock</a>
+
+<footer>Made by Corey Leveen</footer>
