C - RPS is functional using sessions

--- a/Ruby/Sinarps/public/styles.css
+++ b/Ruby/Sinarps/public/styles.css
@@ -1,7 +1,7 @@
-footer {
-  margin-top: 95%;
+* {
+  text-align: center;
 }
 
 body {
-  background-color: lightgoldenrodyellow;
+  background-color: lightblue;
 }
