--- a/Ruby/Sinarps/views/lizard_spock.erb
+++ b/Ruby/Sinarps/views/lizard_spock.erb
@@ -1,1 +1,16 @@
 <h1>Lizard Spock</h1>
+
+<h3>Choose your move!</h3>
+
+<a href="lizard-spock/rock">Rock</a>
+<a href="lizard-spock/paper">Paper</a>
+<a href="lizard-spock/scissors">Scissors</a>
+<a href="lizard-spock/lizard">Lizard</a>
+<a href="lizard-spock/spock">Spock</a>
+
+<h3> <%= session[:string] %> </h3>
+<h3> <%= session[:score_board] %> </h3>
+<h4>Wins: <%= session[:wins] %> </h4>
+<h4>Losses: <%= session[:losses] %> </h4>
+
+<a href="/reset/lizard-spock">Reset</a>
